# litestar-dishka-adaptix

./: .importlinter  .isort.cfg  Dockerfile  docker-compose.yml  pyproject.toml  ruff.toml
src/: alembic.ini  config.py  ioc.py  main.py
src/application/: dto.py
src/application/interactor/: __init__.py  author.py
src/application/interface/: __init__.py  author.py  poem.py  session.py  uuid4.py
src/controllers/http/api/: author.py
src/domain/: entities.py
src/infrastructure/: database.py
src/infrastructure/gateway/: author.py  poem.py
src/infrastructure/migrations/: env.py
src/infrastructure/migrations/versions/: 6bb3a3cce8b9_initial.py
src/infrastructure/models/: __init__.py  base.py  poems.py
