[tool.poetry]
name = "litestar-dishka-adaptix"
version = "0.1.0"
description = ""
authors = ["Vladislav Moskvitin <sevenamber@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = "^2.11.0"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
dishka = "^1.3.0"
adaptix = "^3.0.0b7"
uvicorn = "^0.30.6"
psycopg-binary = "^3.2.1"
psycopg = "^3.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
mypy = "^1.11.2"
isort = "^5.13.2"
import-linter = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
